Fix navbar on mobile and add Chapters page

--- a/index.css
+++ b/index.css
@@ -57,6 +57,20 @@ nav {
   margin: 0;
 }
 
+#menu-checkbox, #menu-btn-visible, #mobile-menu {
+  display: none;
+}
+
+#menu-btn-visible {
+  cursor: pointer;
+}
+
+#mobile-menu {
+  position: fixed;
+  width: 100%;
+  background: white;
+}
+
 .focused-link {
   background: var(--medium-green) !important;
 }
@@ -125,13 +139,15 @@ hr {
 }
 
 .action img {
-  width: 50%;
+  width: 30%;
 }
 
 .action div {
   background: var(--light-orange);
   border-radius: 10px;
   padding: 10px 5px;
+  margin: 0 auto;
+  margin-top: 10px;
   width: 150px; /* FIXME hardcoding bad? */
 }
 
@@ -196,8 +212,10 @@ blockquote p::before {
 /* US.HTML */
 
 .person {
-  margin: 20px;
+  margin: 10px;
   flex: 1;
+  background: var(--light-green);
+  padding: 10px;
 }
 
 .person img {
@@ -211,20 +229,37 @@ blockquote p::before {
     padding: 0;
     margin: 0;
   }
+
   .align-right {
     margin: 0;
   }
+
   .quote {
     width: 100%;
   }
+
   section > div {
     flex-direction: column;
   }
-  /* XXX this doesn't seem like something we should have to do ourselves */
-/*  body {
-    font-size: 60px !important;
+}
+
+@media (max-width: 800px) {
+  .nav-links {
+    display: none;
   }
-  footer {
-    font-size: 30px;
+
+  #menu-btn-visible {
+    display: block;
   }
-*/}
+
+  #menu-checkbox:checked ~ #mobile-menu {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+
+  #menu-checkbox:checked ~ #mobile-menu > a {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+}
